[package]
name = "oembed"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["oembed", "embed"]
description = "Retrieve oEmbed data from a URL"
repository = "https://github.com/dillendev/oembed/"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"], default-features = false }

[features]
jsonschema = ["schemars"]
