[package]
name = "oembed-rs"
version = "0.0.4"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["oembed", "embed"]
description = "Retrieve oEmbed data from a URL"
repository = "https://github.com/brainhivenl/oembed/"

[features]
jsonschema = ["schemars"]

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"], default-features = false }

[dev-dependencies]
mockito = "1.1.0"
tokio = { version = "1.0", features = ["macros"] }
