[package]
name = "oembed-rs"
version = "0.0.7"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["oembed", "embed"]
description = "Retrieve oEmbed data from a URL"
repository = "https://github.com/brainhivenl/oembed/"

[features]
jsonschema = ["schemars"]

[dependencies]
serde_json = "1.0"
lazy_static = "1.5"
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json"], default-features = false }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.0", features = ["macros"] }
